lsp/jtry/x86asmParser.java
// Generated from x86asm.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class x86asmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BYTE=1, WORD=2, DWORD=3, DSEG=4, CSEG=5, INCLUDE=6, TITLE=7, END=8, ORG=9, 
		ENDIF=10, IF=11, EQU=12, DW=13, DB=14, DD=15, PTR=16, OFFSET=17, RW=18, 
		RB=19, RS=20, LENGTH=21, EQ=22, NE=23, MOD=24, COMMENT=25, AH=26, AL=27, 
		BH=28, BL=29, CH=30, CL=31, DH=32, DL=33, AX=34, BX=35, CX=36, DX=37, 
		CI=38, DI=39, BP=40, SP=41, IP=42, CS=43, DS=44, ES=45, SS=46, AAA=47, 
		AAD=48, AAM=49, AAS=50, ADC=51, ADD=52, AND=53, CALL=54, CBW=55, CLC=56, 
		CLD=57, CLI=58, CMC=59, CMP=60, CMPSB=61, CMPSW=62, CWD=63, DAA=64, DAS=65, 
		DEC=66, DIV=67, ESC=68, HLT=69, IDIV=70, IMUL=71, IN=72, INC=73, INT=74, 
		INTO=75, IRET=76, JA=77, JAE=78, JB=79, JBE=80, JC=81, JE=82, JG=83, JGE=84, 
		JL=85, JLE=86, JNA=87, JNAE=88, JNB=89, JNBE=90, JNC=91, JNE=92, JNG=93, 
		JNGE=94, JNL=95, JNLE=96, JNO=97, JNP=98, JNS=99, JNZ=100, JO=101, JP=102, 
		JPE=103, JPO=104, JS=105, JZ=106, JCXZ=107, JMP=108, JMPS=109, JMPF=110, 
		LAHF=111, LDS=112, LEA=113, LES=114, LOCK=115, LODS=116, LODSB=117, LODSW=118, 
		LOOP=119, LOOPE=120, LOOPNE=121, LOOPNZ=122, LOOPZ=123, MOV=124, MOVS=125, 
		MOVSB=126, MOVSW=127, MUL=128, NEG=129, NOP=130, NOT=131, OR=132, OUT=133, 
		POP=134, POPF=135, PUSH=136, PUSHF=137, RCL=138, RCR=139, RET=140, RETN=141, 
		RETF=142, ROL=143, ROR=144, SAHF=145, SAL=146, SAR=147, SALC=148, SBB=149, 
		SCASB=150, SCASW=151, SHL=152, SHR=153, STC=154, STD=155, STI=156, STOSB=157, 
		STOSW=158, SUB=159, TEST=160, WAIT=161, XCHG=162, XLAT=163, XOR=164, REP=165, 
		REPE=166, REPNE=167, REPNZ=168, REPZ=169, STAR=170, SLASH=171, DOLLAR=172, 
		PLUS=173, MINUS=174, NOT_=175, COLON=176, DOT=177, RP=178, LP=179, COMMA=180, 
		SEMI=181, LB=182, RB_=183, NAME=184, NUMBER=185, STRING=186, EOL=187, 
		WS=188;
	public static final int
		RULE_prog = 0, RULE_line = 1, RULE_instruction = 2, RULE_lbl = 3, RULE_assemblerdirective = 4, 
		RULE_rw = 5, RULE_rb = 6, RULE_rs = 7, RULE_cseg = 8, RULE_dseg = 9, RULE_dw = 10, 
		RULE_db = 11, RULE_dd = 12, RULE_equ = 13, RULE_if_ = 14, RULE_assemblerexpression = 15, 
		RULE_assemblerlogical = 16, RULE_assemblerterm = 17, RULE_endif_ = 18, 
		RULE_end = 19, RULE_org = 20, RULE_title = 21, RULE_include_ = 22, RULE_expressionlist = 23, 
		RULE_label = 24, RULE_expression = 25, RULE_multiplyingExpression = 26, 
		RULE_argument = 27, RULE_ptr = 28, RULE_dollar = 29, RULE_register_ = 30, 
		RULE_string_ = 31, RULE_name = 32, RULE_number = 33, RULE_opcode = 34, 
		RULE_rep = 35, RULE_sign = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "line", "instruction", "lbl", "assemblerdirective", "rw", "rb", 
			"rs", "cseg", "dseg", "dw", "db", "dd", "equ", "if_", "assemblerexpression", 
			"assemblerlogical", "assemblerterm", "endif_", "end", "org", "title", 
			"include_", "expressionlist", "label", "expression", "multiplyingExpression", 
			"argument", "ptr", "dollar", "register_", "string_", "name", "number", 
			"opcode", "rep", "sign"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'BYTE'", "'WORD'", "'DWORD'", "'DSEG'", "'CSEG'", "'INCLUDE'", 
			"'TITLE'", "'END'", "'ORG'", "'ENDIF'", "'IF'", "'EQU'", "'DW'", "'DB'", 
			"'DD'", "'PTR'", "'OFFSET'", "'RW'", "'RB'", "'RS'", "'LENGTH'", "'EQ'", 
			"'NE'", "'MOD'", null, "'AH'", "'AL'", "'BH'", "'BL'", "'CH'", "'CL'", 
			"'DH'", "'DL'", "'AX'", "'BX'", "'CX'", "'DX'", "'CI'", "'DI'", "'BP'", 
			"'SP'", "'IP'", "'CS'", "'DS'", "'ES'", "'SS'", "'AAA'", "'AAD'", "'AAM'", 
			"'AAS'", "'ADC'", "'ADD'", "'AND'", "'CALL'", "'CBW'", "'CLC'", "'CLD'", 
			"'CLI'", "'CMC'", "'CMP'", "'CMPSB'", "'CMPSW'", "'CWD'", "'DAA'", "'DAS'", 
			"'DEC'", "'DIV'", "'ESC'", "'HLT'", "'IDIV'", "'IMUL'", "'IN'", "'INC'", 
			"'INT'", "'INTO'", "'IRET'", "'JA'", "'JAE'", "'JB'", "'JBE'", "'JC'", 
			"'JE'", "'JG'", "'JGE'", "'JL'", "'JLE'", "'JNA'", "'JNAE'", "'JNB'", 
			"'JNBE'", "'JNC'", "'JNE'", "'JNG'", "'JNGE'", "'JNL'", "'JNLE'", "'JNO'", 
			"'JNP'", "'JNS'", "'JNZ'", "'JO'", "'JP'", "'JPE'", "'JPO'", "'JS'", 
			"'JZ'", "'JCXZ'", "'JMP'", "'JMPS'", "'JMPF'", "'LAHF'", "'LDS'", "'LEA'", 
			"'LES'", "'LOCK'", "'LODS'", "'LODSB'", "'LODSW'", "'LOOP'", "'LOOPE'", 
			"'LOOPNE'", "'LOOPNZ'", "'LOOPZ'", "'MOV'", "'MOVS'", "'MOVSB'", "'MOVSW'", 
			"'MUL'", "'NEG'", "'NOP'", "'NOT'", "'OR'", "'OUT'", "'POP'", "'POPF'", 
			"'PUSH'", "'PUSHF'", "'RCL'", "'RCR'", "'RET'", "'RETN'", "'RETF'", "'ROL'", 
			"'ROR'", "'SAHF'", "'SAL'", "'SAR'", "'SALC'", "'SBB'", "'SCASB'", "'SCASW'", 
			"'SHL'", "'SHR'", "'STC'", "'STD'", "'STI'", "'STOSB'", "'STOSW'", "'SUB'", 
			"'TEST'", "'WAIT'", "'XCHG'", "'XLAT'", "'XOR'", "'REP'", "'REPE'", "'REPNE'", 
			"'REPNZ'", "'REPZ'", "'*'", "'/'", "'$'", "'+'", "'-'", "'!'", "':'", 
			"'.'", "'('", "')'", "','", "';'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BYTE", "WORD", "DWORD", "DSEG", "CSEG", "INCLUDE", "TITLE", "END", 
			"ORG", "ENDIF", "IF", "EQU", "DW", "DB", "DD", "PTR", "OFFSET", "RW", 
			"RB", "RS", "LENGTH", "EQ", "NE", "MOD", "COMMENT", "AH", "AL", "BH", 
			"BL", "CH", "CL", "DH", "DL", "AX", "BX", "CX", "DX", "CI", "DI", "BP", 
			"SP", "IP", "CS", "DS", "ES", "SS", "AAA", "AAD", "AAM", "AAS", "ADC", 
			"ADD", "AND", "CALL", "CBW", "CLC", "CLD", "CLI", "CMC", "CMP", "CMPSB", 
			"CMPSW", "CWD", "DAA", "DAS", "DEC", "DIV", "ESC", "HLT", "IDIV", "IMUL", 
			"IN", "INC", "INT", "INTO", "IRET", "JA", "JAE", "JB", "JBE", "JC", "JE", 
			"JG", "JGE", "JL", "JLE", "JNA", "JNAE", "JNB", "JNBE", "JNC", "JNE", 
			"JNG", "JNGE", "JNL", "JNLE", "JNO", "JNP", "JNS", "JNZ", "JO", "JP", 
			"JPE", "JPO", "JS", "JZ", "JCXZ", "JMP", "JMPS", "JMPF", "LAHF", "LDS", 
			"LEA", "LES", "LOCK", "LODS", "LODSB", "LODSW", "LOOP", "LOOPE", "LOOPNE", 
			"LOOPNZ", "LOOPZ", "MOV", "MOVS", "MOVSB", "MOVSW", "MUL", "NEG", "NOP", 
			"NOT", "OR", "OUT", "POP", "POPF", "PUSH", "PUSHF", "RCL", "RCR", "RET", 
			"RETN", "RETF", "ROL", "ROR", "SAHF", "SAL", "SAR", "SALC", "SBB", "SCASB", 
			"SCASW", "SHL", "SHR", "STC", "STD", "STI", "STOSB", "STOSW", "SUB", 
			"TEST", "WAIT", "XCHG", "XLAT", "XOR", "REP", "REPE", "REPNE", "REPNZ", 
			"REPZ", "STAR", "SLASH", "DOLLAR", "PLUS", "MINUS", "NOT_", "COLON", 
			"DOT", "RP", "LP", "COMMA", "SEMI", "LB", "RB_", "NAME", "NUMBER", "STRING", 
			"EOL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "x86asm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public x86asmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(x86asmParser.EOF, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof x86asmListener ) ((x86asmListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof x86asmListener ) ((x86asmListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -140737486458896L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & -1L) != 0) || ((((_la - 128)) & ~0x3f) == 0 && ((1L << (_la - 128)) & 649226431829639167L) != 0)) {
				{
				{
				setState(74);
				line();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineContext extends ParserRuleContext {
		public TerminalNode EOL() { return getToken(x86asmParser.EOL, 0); }
		public LblContext lbl() {
			return getRuleContext(LblContext.class,0);
		}
		public AssemblerdirectiveContext assemblerdirective() {
			return getRuleContext(AssemblerdirectiveContext.class,0);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public List<TerminalNode> NOT_() { return getTokens(x86asmParser.NOT_); }
		public TerminalNode NOT_(int i) {
			return getToken(x86asmParser.NOT_, i);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof x86asmListener ) ((x86asmListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof x86asmListener ) ((x86asmListener)listener).exitLine(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(82);
				lbl();
				}
				break;
			}
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DSEG:
			case CSEG:
			case INCLUDE:
			case TITLE:
			case END:
			case ORG:
			case ENDIF:
			case IF:
			case DW:
			case DB:
			case DD:
			case RW:
			case RB:
			case RS:
			case DOT:
			case NAME:
				{
				setState(85);
				assemblerdirective();
				}
				break;
			case AAA:
			case AAD:
			case AAM:
			case AAS:
			case ADC:
			case ADD:
			case AND:
			case CALL:
			case CBW:
			case CLC:
			case CLD:
			case CLI:
			case CMC:
			case CMP:
			case CMPSB:
			case CMPSW:
			case CWD:
			case DAA:
			case DAS:
			case DEC:
			case DIV:
			case ESC:
			case HLT:
			case IDIV:
			case IMUL:
			case IN:
			case INC:
			case INT:
			case INTO:
			case IRET:
			case JA:
			case JAE:
			case JB:
			case JBE:
			case JC:
			case JE:
			case JG:
			case JGE:
			case JL:
			case JLE:
			case JNA:
			case JNAE:
			case JNB:
			case JNBE:
			case JNC:
			case JNE:
			case JNG:
			case JNGE:
			case JNL:
			case JNLE:
			case JNO:
			case JNP:
			case JNS:
			case JNZ:
			case JO:
			case JP:
			case JPE:
			case JPO:
			case JS:
			case JZ:
			case JCXZ:
			case JMP:
			case JMPS:
			case JMPF:
			case LAHF:
			case LDS:
			case LEA:
			case LES:
			case LOCK:
			case LODS:
			case LODSB:
			case LODSW:
			case LOOP:
			case LOOPE:
			case LOOPNE:
			case LOOPNZ:
			case LOOPZ:
			case MOV:
			case MOVS:
			case MOVSB:
			case MOVSW:
			case MUL:
			case NEG:
			case NOP:
			case NOT:
			case OR:
			case OUT:
			case POP:
			case POPF:
			case PUSH:
			case PUSHF:
			case RCL:
			case RCR:
			case RET:
			case RETN:
			case RETF:
			case ROL:
			case ROR:
			case SAHF:
			case SAL:
			case SAR:
			case SALC:
			case SBB:
			case SCASB:
			case SCASW:
			case SHL:
			case SHR:
			case STC:
			case STD:
			case STI:
			case STOSB:
			case STOSW:
			case SUB:
			case TEST:
			case WAIT:
			case XCHG:
			case XLAT:
			case XOR:
			case REP:
			case REPE:
			case REPNE:
			case REPNZ:
			case REPZ:
				{
				setState(86);
				instruction();
				}
				break;
			case NOT_:
			case EOL:
				break;
			default:
				break;
			}
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NOT_) {
				{
				{
				setState(89);
				match(NOT_);
				setState(90);
				instruction();
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(96);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionContext extends ParserRuleContext {
		public OpcodeContext opcode() {
			return getRuleContext(OpcodeContext.class,0);
		}
		public RepContext rep() {
			return getRuleContext(RepContext.class,0);
		}
		public ExpressionlistContext expressionlist() {
			return getRuleContext(ExpressionlistContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof x86asmListener ) ((x86asmListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof x86asmListener ) ((x86asmListener)listener).exitInstruction(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 165)) & ~0x3f) == 0 && ((1L << (_la - 165)) & 31L) != 0)) {
				{
				setState(98);
				rep();
				}
			}

			setState(101);
			opcode();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 140737423540238L) != 0) || ((((_la - 131)) & ~0x3f) == 0 && ((1L << (_la - 131)) & 65458325248016385L) != 0)) {
				{
				setState(102);
				expressionlist();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LblContext extends ParserRuleContext {
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public TerminalNode COLON() { return getToken(x86asmParser.COLON, 0); }
		public LblContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lbl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof x86asmListener ) ((x86asmListener)listener).enterLbl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof x86asmListener ) ((x86asmListener)listener).exitLbl(this);
		}
	}

	public final LblContext lbl() throws RecognitionException {
		LblContext _localctx = new LblContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lbl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			label();
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(106);
				match(COLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssemblerdirectiveContext extends ParserRuleContext {
		public OrgContext org() {
			return getRuleContext(OrgContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public If_Context if_() {
			return getRuleContext(If_Context.class,0);
		}
		public Endif_Context endif_() {
			return getRuleContext(Endif_Context.class,0);
		}
		public EquContext equ() {
			return getRuleContext(EquContext.class,0);
		}
		public DbContext db() {
			return getRuleContext(DbContext.class,0);
		}
		public DwContext dw() {
			return getRuleContext(DwContext.class,0);
		}
		public CsegContext cseg() {
			return getRuleContext(CsegContext.class,0);
		}
		public DdContext dd() {
			return getRuleContext(DdContext.class,0);
		}
		public DsegContext dseg() {
			return getRuleContext(DsegContext.class,0);
		}
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public Include_Context include_() {
			return getRuleContext(Include_Context.class,0);
		}
		public RwContext rw() {
			return getRuleContext(RwContext.class,0);
		}
		public RbContext rb() {
			return getRuleContext(RbContext.class,0);
		}
		public RsContext rs() {
			return getRuleContext(RsContext.class,0);
		}
		public TerminalNode DOT() { return getToken(x86asmParser.DOT, 0); }
		public AssemblerdirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assemblerdirective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof x86asmListener ) ((x86asmListener)listener).enterAssemblerdirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof x86asmListener ) ((x86asmListener)listener).exitAssemblerdirective(this);
		}
	}

	public final AssemblerdirectiveContext assemblerdirective() throws RecognitionException {
		AssemblerdirectiveContext _localctx = new AssemblerdirectiveContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assemblerdirective);
		try {
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				org();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				end();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				if_();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(112);
				endif_();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(113);
				equ();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(114);
				db();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(115);
				dw();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(116);
				cseg();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(117);
				dd();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(118);
				dseg();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(119);
				title();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(120);
				include_();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(121);
				rw();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(122);
				rb();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(123);
				rs();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(124);
				match(DOT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RwContext extends ParserRuleContext {
		public TerminalNode RW() { return getToken(x86asmParser.RW, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public RwContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rw; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof x86asmListener ) ((x86asmListener)listener).enterRw(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof x86asmListener ) ((x86asmListener)listener).exitRw(this);
		}
	}

	public final RwContext rw() throws RecognitionException {
		RwContext _localctx = new RwContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_rw);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAME) {
				{
				setState(127);
				name();
				}
			}

			setState(130);
			match(RW);
			setState(131);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
